# eda-copilot

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
docs/: architecture.md  current-state.md  improvement-plan.md  methodology.md  product-vision.md  skill-direction.md  user_guide.md
skills/tabular-eda-skill/: SKILL.md  fallback.md  validation_checklist.md
skills/tabular-eda-skill/actions/: review_evidence_packet.md  run_full_eda.md
skills/tabular-eda-skill/examples/: basic_binary_eda.md
skills/tabular-eda-skill/references/: current_contracts.md
skills/tabular-eda-skill/schemas/: evidence_packet_contract.schema.json  run_full_eda_input.schema.json  run_full_eda_output.schema.json
src/eda_copilot/: __init__.py
src/eda_copilot/ai/: __init__.py  query_planner.py  summarizer.py  validators.py
src/eda_copilot/app/: __init__.py  optional_visual_explorer.py  streamlit_app.py
src/eda_copilot/core/: __init__.py  config.py  data_loading.py  state.py  workflow.py
src/eda_copilot/eda/: __init__.py  bivariate.py  comparison.py  (+13 more)
tests/fixtures/: sample_binary.csv
tests/integration/: test_baseline_contracts.py  test_workflow.py
tests/unit/: test_ai_privacy.py  test_config_validation.py  test_data_loading.py  test_drift.py  test_feature_ranking.py  test_missingness.py  test_modeling_risk.py  test_profiling.py  test_quality_checks.py  test_report_builder.py  test_reporting_validation.py  test_response_analysis.py  test_run_history.py  test_skill_skeleton.py  test_streamlit_app.py  test_type_inference.py  test_univariate.py  test_visualization_specs.py
(+13 files in other folders)
