[project]
name = "eda-copilot"
version = "0.1.0"
description = "Deterministic, response-aware EDA framework with standardized reports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "plotly>=5.22",
  "pyarrow>=15.0",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "streamlit>=1.50",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eda_copilot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
